_themes/tm3/css/layout.css
/* Standard Layout Tools */
*,
*::before,
*::after
{
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

footer
{
    background-color: #111;
    color: #FFF;
    position: relative;
    z-index: 1;
}

footer [class*=col] { padding-bottom: 0; }

footer [data-icon]
{
    font-size: 0;
    margin-left: 6px;
    margin-right: 6px;
    padding: 0;
    width: 44px;
}

footer [data-icon]::before
{
    font-size: 2.5rem;
}

#social-links { text-align: center; }

#content,
#site-wrapper
{
    position: relative;
    z-index: 1;
}

.tile.light * { color: #fff; }

.col-full,
.col-1-2,
.col-1-3,
.col-1-4,
.col-1-5,
.col-1-6,
.col-1-7,
.col-1-8,
.col-3-8,
.col-5-6,
.col-6-7,
.col-2-3,
.col-3-4 { padding: 0; width: 100%; }

.margin { margin: 24px; }
.margin-horizontal { margin: 0 24px; }
.margin-vertical { margin: 24px 0; }
.margin-half { margin: 12px; }
.margin-half-horizontal { margin: 0 12px; }
.margin-half-vertical { margin: 12px 0; }

.pad { padding: 24px; }
.pad-icon-left { padding: 24px 24px 24px 52px; }
.pad-icon-right { padding: 24px 72px 24px 24px; }
.pad-horizontal { padding: 0 24px; }
.pad-half-horizontal { padding: 0 12px; }
.pad-vertical { padding: 24px 0; }
.pad-half { padding: 12px; }
.pad-half-icon-left { padding: 12px 12px 12px 52px; }
.pad-half-icon-right { padding: 12px 72px 12px 12px; }
.pad-half-vertical { padding: 12px 0; }

.no-pad { padding: 0 !important; }

.card,
.map #performance-list
{
    border: 1px solid #DBDBDB;
    background-color: #fff;
}

.card
{
    -webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
}

[class*=row]
{
    overflow: hidden;
    position: relative;
}

@media (min-width: 768px)
{
    #social-links { text-align: right; }

    .map #performance-list
    {
        -webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
        box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
    }

    .center-layout
    {
        margin: 0 auto;
        max-width: 960px;
    }

    [class*='col-']
    {
        float: left;
        padding-right: 12px;
        padding-right: 12px;
        position: relative;
        padding-bottom: 12px;
    }

    .col-1-8 { width: 12.5%; }
    .col-1-7 { width: 14.28571429%; }
    .col-1-6 { width: 16.66666667%; }
    .col-1-5 { width: 20%; }
    .col-1-4 { width: 25%; }
    .col-1-3 { width: 33.33%; }
    .col-1-2 { width: 50%; }
    .col-2-3 { width: 66.66%; }
    .col-3-4 { width: 75%; }
    .col-7-8 { width: 87.5%; }
    .col-full { padding-right: 0; width: 100%; }

    .pad-right { padding-right: 24px !important; }
}

@media (min-width: 768px)
{
    .center-layout { max-width: 1140px; }
}

